# dotenvk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  devenv.nix
.github/workflows/: ci.yml  release.yml
demo/: .env.production  .env.staging  README.md  demo.tape  quickdemo.sh  quickdemo.tape  run_demo.sh
script/: install.sh  release.sh
src/: lib.rs  main.rs
tests/: integration_export_test.rs
