[package]
name = "dotenvk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9.2"
regex = "1.11.2"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
test-case = "3.3"
pretty_assertions = "1.4"
fake = "2.9"
quickcheck = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
